Rounded out application of labels to form fields

--- a/wai-aria-roles.css
+++ b/wai-aria-roles.css
@@ -29,6 +29,10 @@
     font-weight: bold !important;
 }
 
+
 label {
-    visibility: hidden;
+  position: absolute !important;
+  height: 1px; width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
 }
