More closely match the spec for displaying form fields.

--- a/wai-aria-roles.css
+++ b/wai-aria-roles.css
@@ -30,9 +30,19 @@
 }
 
 
-label, img {
+img {
   position: absolute !important;
   height: 1px; width: 1px;
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
+}
+
+label {
+  opacity: 0.5;
+}
+
+.field-label-wrapper {
+  padding: 2px;
+  margin: 2px 0;
+  background-color: #ccc;
 }
