Display announced labels when an element is focused.

--- a/wai-aria-roles.css
+++ b/wai-aria-roles.css
@@ -38,6 +38,17 @@ img {
 }
 
 
-.field-label-wrapper span {
-  border-bottom: 1px dashed;
+.announce-on-focus {
+  display: none;
+}
+
+
+:focus + .announce-on-focus {
+  display: inline;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: relative;
+  overflow: visible;
+  background: yellow;
 }
